disable workflow - span a new jvm for each test