@@ -448,9 +448,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.19.1</version>
+        <version>2.22.1</version>
         <configuration>
-          <argLine>-Xmx6g -XX:MaxPermSize=512m</argLine>
+          <argLine>-Xmx6g</argLine>
+          <reuseForks>false</reuseForks> <!-- This will make sure to spawn a fresh jvm for each test -->
         </configuration>
       </plugin>
     </plugins>
